# freedom

./: .env.example  .eslintrc.cjs  .eslintrc.js  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .prettierignore  .prettierrc  .replit  .travis.yml  BETA.md  CHANGELOG.md  Cargo.toml  DOMAINS.md  Dockerfile  LICENSE  Pipfile  README.md  TODO.md  apollo-server.ts  app.vue  astro.config.ts  binding.gyp  ci.js  color-palete.md  compress.js  config.example.json  fresh.gen.ts  import_map.json  installTypes.js  jest.config.js  node.sh  nuxt.config.js  package-lock.json  package.json  playwright.config.ts  postinstall.js  pyproject.toml  rust-toolchain.toml  svelte.config.js  (+4 more)
.ci/: build.js  ci.js
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml  playwright.yml  release.yml
backend/: Cargo.toml  app.ts  build.rs  dbConnect.js  index.js  package-lock.json  package.json  tsconfig.json
backend/C/: all.cc  all.cpp  c.h  test.cc  test.cpp
backend/Cpp/: all.cc  c.h
backend/events/: changePasswd.js  changeUsername.js  createPetition.js  emitToIO.js  login.js  message.js  presence.js  rmUser.js  signUp.js  usernameToID.js  vc.js
backend/functions/: dev.js  logging.js  newMessage.js  quit.js
backend/models/: message.js  petition.js  thread.js  user.js
backend/python/: app.py  index.js  index.py  init.py  test.js  test.py
backend/python/routes/: test.py
backend/routes/: frontend.js  isDev.js  pull.js  quotes.js
backend/src/: api.rs  frontend.rs  lib.rs  main.rs
backend/src/api/: mod.rs
backend/src/api/misc/: mod.rs  quote.rs
backend/utils/: createPetition.js  dev.js  logging.js
client/: Cargo.toml
client/src/: global.css  index.html  lib.rs
client/src/pages/: index.rs  mod.rs  not_found.rs
components/: Tutorial.vue
electron/: index.html  index.js  package-lock.json  package.json
frontend/: __empty.ts  astro.config.mjs  package-lock.json  package.json  postcss.config.cjs  tailwind.config.js  tsconfig.json
frontend/components/: ad.jsx  button.js  index.js  layout.js  layout.jsx
frontend/pages/: _app.jsx  _document.js  _document.jsx  app.jsx  index.js  index.jsx  login.js  login.jsx  logout.js  logout.jsx  signup.js  signup.jsx  vc.js  vc.jsx
frontend/public/js/: global.js
frontend/src/components/: PreactCounter.tsx  VueCounter.vue  navigation.astro
frontend/src/pages/: 404.tsx  _app.tsx  direct.tsx  index.astro  index.tsx  test.tsx
frontend/src/styles/: Direct.module.css  global.css
frontend/src/utils/: websocket.ts
frontend/styles/: _global-vars.scss  _mixins.scss  button.module.scss  global.css  theme.css
frontend/utils/: fetcher.ts  hashing.ts  index.js
islands/: Messages.tsx
layouts/: default.vue
pages/: index.vue
pages/blog/: _slug.vue
prisma/: schema.prisma
routes/: index.tsx
routes/api/: ws.ts
server/: Cargo.toml  build.rs
server/src/: main.rs  ws.rs
src/: app.d.ts  app.html  hooks.server.ts  hooks.ts
src/lib/: Err.svelte  Error.svelte  Logo.svelte  Nav.svelte  NotLoggedIn.svelte  Sidebar.svelte  bcrypt.ts  common.ts  consts.ts  cutil.ts  fonts.css  models.ts  prisma.ts  stores.ts  sutil.ts  util.ts
src/lib/models/: chat.ts  server.ts  user.ts
src/lib/tRPC/: ClientError.svelte  client.ts  server.ts
src/lib/tRPC/users/: index.ts
src/pages/: index.tsx
src/pages/api/: hello.ts
src/params/: ObjectId.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  __layout.svelte  direct.svelte  friends.svelte  graphql.ts  hooks.ts  index.svelte  login.svelte  settings.svelte  signup.svelte
src/routes/(login-signin)/: +layout@.svelte
src/routes/(login-signin)/login/: +page.server.ts  +page.svelte
src/routes/(login-signin)/signup/: +page.server.ts  +page.svelte
src/routes/_set-token/: +page.server.ts
src/routes/api/: login.ts  signup.ts
src/routes/api/user/: [id=ObjectId].ts  friends.ts  login.ts  signup.ts
src/routes/direct/: +page.svelte
src/routes/friends/: +page.svelte
src/routes/login/: +page.server.ts  +page.svelte
src/routes/settings/: +page.svelte
src/routes/signup/: +page.server.ts  +page.svelte
src/routes/test/: logo-side@raw.svelte  logo-top@raw.svelte
tests/: example.spec.ts  login.spec.ts
(+10 files in other folders)
