[package]
name = "freedom"
authors = [
  "Jay Jackson <TheBotlyNoob> (jj@jj.is-a.dev)",
  "Mahir Molai <molai.dev> (mahir@molai.dev)",
]
edition = "2021"
version = "0.0.0"

[lib]
name = "freedom_macros"
proc-macro = true

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
poem = { version = "1.3", features = ["static-files"] }
poem-openapi = { version = "1.3", features = ["swagger-ui"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.9"
quote = { version = "1.0" }
proc-macro2 = "1.0"

[build-dependencies]
which = "4.2"
