[package]
name = "freedom"
authors = [
  "Jay Jackson <TheBotlyNoob> (jj@jj.is-a.dev)",
  "Mahir Molai <molai.dev> (mahir@molai.dev)",
]
edition = "2021"
version = "0.0.0"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rweb = { version = "0.6", features = ["openapi"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.9"
quote = { version = "1.0" }
proc-macro2 = "1.0"

[build-dependencies]
which = "4.2"
