[package]
name = "freedom"
authors = [
  "Jay Jackson <TheBotlyNoob> (jj@jj.is-a.dev)",
  "Mahir Molai <molai.dev> (mahir@molai.dev)",
]
edition = "2021"
version = "0.0.0"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
actix-web = "4.0"
rust-embed = { version = "6.4", features = ["interpolate-folder-path"] }
paperclip = { version = "0.7", features = ["actix4-nightly", "v3"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.9"
mime_guess = "2.0"

[build-dependencies]
which = "4.2"
